2007-11-18  Nestor Salceca  <nestor.salceda@gmail.com>
	
	* Gendarme.Rules.Performance.xml.in: Fix the problem closing tag in
	AvoidStringOnStringsRule description.

2007-11-10  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* Gendarme.Rules.Performance.xml.in: Added Uri for
	UsingStringLengthInsteadOfEmptyStringRule,
	AvoidUninstantiatedInternalClassesRule, AvoidUncalledPrivateCodeRule,
	AvoidToStringOnStringsRule and DontIgnoreMethodResultRule.

2007-11-10  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* Gendarme.Rules.Performance.xml.in:  Added documentation for
	AvoidToStringOnStringsRule and DontIgnoreMethodResultRule.

2007-10-08  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidToStringOnStringsRule.cs: Fix in case where the method has no
	body (e.g. p/invoke, icalls...);
	* UsingStringLengthInsteadOfCheckingEmptyStringRule.cs: Fix in case 
	where the method has no	body (e.g. p/invoke, icalls...);

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidToStringOnStringsRule.cs: New rule (Lukasz Knop, GSoC 2007)
	* AvoidUncalledPrivateCodeRule.cs: New rule (Nidhi Rawal, GSoC 2007)
	* AvoidUninstantiatedInternalClassesRule.cs: New rule (Nidhi Rawal, 
	GSoC 2007)
	* DontIgnoreMethodResultRule.cs: New rule (Lukasz Knop, GSoC 2007)
	* UsingStringLengthInsteadOfCheckingEmptyStringRule.cs: New rule
	(Nidhi Rawal, GSoC 2007)
	* Gendarme.Rules.Performance.xml.in: Update rule descriptions.
	* Makefile.am: Add new rules/tests to build.
	* Gendarme.Rules.Performance.mdp: Update project file.

2007-10-04  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Performance.mdp, Test.Rules.Performance.mdp:  Added 
	AvoidUnusedParametersRule and the respective unit test to 
	MonoDevelop project file.

2007-09-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Performance.xml.in:  Added Uri for
	AvoidUnusedParametersRule.

2007-09-04  Nestor Salceda  <nestor.salceda@gmail.com>
