@@ -1,3 +1,9 @@
+2007-11-21  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AvoidUncalledPrivateCodeRule.cs: Simplified logic. Avoid using 
+	strings. Consider finalizers (since it's normal that they look 
+	uncalled). Pass all unit tests under Mono but 3 fails under MS 2.0!
+
 2007-11-18  Nestor Salceca  <nestor.salceda@gmail.com>
 	
 	* Gendarme.Rules.Performance.xml.in: Fix the problem closing tag in
